# chessBingen

./: .clang-format  .gitignore  CMakeLists.txt  Readme.org
include/: .clang-format  board.h  data.h
src/: board.cpp  declarations.cpp  fenReader.cpp  main.cpp  pieces.cpp  search.cpp
